--- a/assets/css/_blocos.scss
+++ b/assets/css/_blocos.scss
@@ -14,7 +14,7 @@ ul.blocos {
       min-height: 200px;
   
       &:nth-child(1) {
-          background-color: red;
+          background-color: green;
       }
       &:nth-child(2) {
           background-color: yellow;
