--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -57,4 +57,5 @@ menu {
   background-color: rgb(255, 94, 0);
   border-left: auto;
   border-right: auto;
+  justify-content: center;
 }/*# sourceMappingURL=styles.css.map */
